Adicionando estilo para a nossa página

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" href="/design.css"/>	
 	</head>
-
+	
 	<body>
 		<h1>Git</h1>
 		<h2>Trabalhando em equipe com controle e seguranca</h2>
