--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" type="text/css" href="/design.css"/>	
+		<link rel="stylesheet" type="text/css" href="design.css"/>	
 	</head>
 	
 	<body>
